--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
     <script src="/script.js"></script>
     <title>Currency Converter</title>
 </head>
 <body>
-    
+    <section>
+        <div class="container">
+            <h1>1 usd to jmd</h1>
+            <span></span>
+        </div>
+    </section>
 </body>
 </html>
